<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.udacity.shoestore.ShoeViewModel" />

        <variable
            name="fragment"
            type="com.udacity.shoestore.ShoeDetailFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ShoeDetailFragment">

        <TextView
            android:id="@+id/name_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:text="@string/shoe_name"
            style="@style/TextStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/name_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginEnd="@dimen/margin_16"
            android:autofillHints="true"
            android:hint="@string/enter_shoe_name"
            android:text="@={viewModel.shoe.name}"
            android:inputType="text"
            android:minHeight="48dp"
            style="@style/EditeTextStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_label" />

        <TextView
            android:id="@+id/company_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_16"
            android:text="@string/company"
           style="@style/TextStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_edittext" />

        <EditText
            android:id="@+id/company_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginEnd="@dimen/margin_16"
            android:autofillHints="true"
            android:hint="@string/enter_company"
            android:text="@={viewModel.shoe.company}"
            android:inputType="text"
            android:minHeight="48dp"
            style="@style/EditeTextStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/company_label" />

        <TextView
            android:id="@+id/shoe_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/margin_16"
            android:text="@string/shoe_size"
            style="@style/TextStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/company_edittext" />

        <EditText
            android:id="@+id/shoe_size_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="@dimen/margin_16"
            android:autofillHints="true"
            android:hint="@string/enter_shoe_size"
            android:inputType="text"
            android:text="@={``+ viewModel.shoe.size}"
            android:minHeight="48dp"
            style="@style/EditeTextStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_label" />

        <TextView
            android:id="@+id/description_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/margin_16"
            android:text="@string/shoe_description"
            style="@style/TextStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_size_edittext" />

        <EditText
            android:id="@+id/description_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="@dimen/margin_16"
            android:autofillHints="true"
            android:hint="@string/enter_shoe_description"
            android:text="@={viewModel.shoe.description}"
            android:inputType="text"
            android:minHeight="48dp"
            style="@style/EditeTextStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_label" />

        <Button
            android:id="@+id/save_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:padding="@dimen/padding_10"
            android:text="@string/save"
            style="@style/ShoeButtons"
            android:onClick="@{()->fragment.onSaveClick()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_edittext" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:padding="@dimen/padding_10"
            android:text="@string/cancel"
            style="@style/ShoeButtons"
            android:onClick="@{()->fragment.onCancel()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/save_btn" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
