<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.udacity.shoestore.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment"
            app:enterAnim="@anim/fad_in"
            app:exitAnim="@anim/fad_out"
            app:popEnterAnim="@anim/fad_in"
            app:popExitAnim="@anim/fad_out" />
    </fragment>
    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.udacity.shoestore.WelcomeFragment"
        android:label="@string/welcome_label">
        <action
            android:id="@+id/action_welcomeFragment_to_instructionFragment"
            app:destination="@id/instructionFragment"
            app:enterAnim="@anim/fad_in"
            app:exitAnim="@anim/fad_out"
            app:popEnterAnim="@anim/fad_in"
            app:popExitAnim="@anim/fad_out"/>
    </fragment>
    <fragment
        android:id="@+id/instructionFragment"
        android:name="com.udacity.shoestore.InstructionFragment"
        android:label="@string/instructions">
        <action
            android:id="@+id/action_instructionFragment_to_shoeListFragment"
            app:destination="@id/shoeListFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true"
            app:enterAnim="@anim/fad_in"
            app:exitAnim="@anim/fad_out"
            app:popEnterAnim="@anim/fad_in"
            app:popExitAnim="@anim/fad_out"/>
    </fragment>
    <fragment
        android:id="@+id/shoeListFragment"
        android:name="com.udacity.shoestore.ShoeListFragment"
        android:label="@string/shoe_list" >
        <action
            android:id="@+id/action_shoeListFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:launchSingleTop="false"
            app:popUpTo="@id/shoeListFragment"
            app:popUpToInclusive="true"
            app:enterAnim="@anim/fad_in"
            app:exitAnim="@anim/fad_out"
            app:popEnterAnim="@anim/fad_in"
            app:popExitAnim="@anim/fad_out"/>
        <action
            android:id="@+id/action_shoeListFragment_to_shoeDetailFragment"
            app:destination="@id/shoeDetailFragment"
            app:enterAnim="@anim/fad_in"
            app:exitAnim="@anim/fad_out"
            app:popEnterAnim="@anim/fad_in"
            app:popExitAnim="@anim/fad_out"/>
    </fragment>
    <fragment
        android:id="@+id/shoeDetailFragment"
        android:name="com.udacity.shoestore.ShoeDetailFragment"
        android:label="@string/shoe_detail_fragment">
        <action
            android:id="@+id/action_shoeDetailFragment_to_shoeListFragment"
            app:destination="@id/shoeListFragment"
            app:popUpTo="@id/shoeListFragment"
            app:enterAnim="@anim/fad_in"
            app:exitAnim="@anim/fad_out"
            app:popEnterAnim="@anim/fad_in"
            app:popExitAnim="@anim/fad_out"/>
    </fragment>
</navigation>